# chiraura

./: Cargo.toml  mysite.toml
.github/workflows/: ci.yaml  clippy.yml  format.yml  test.yml
src/: main.rs  types.rs  util.rs
src/util/: askama.rs  file.rs  toml.rs
static/: style.css
templates/: index.html
