[package]
name = "chiraura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11.1"
clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.5.10"
